objects/TemplateSection__c.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content</label>
        <referenceTo>Template_Content__c</referenceTo>
        <relationshipLabel>Template Sections</relationshipLabel>
        <relationshipName>TemplateSections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Quote_Totals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Quote Totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <referenceTo>Quote_Template__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Template Section</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Template__c</columns>
        <columns>Content__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>